--- a/acceuil.html
+++ b/acceuil.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Exemple</title>
+  <title>Exemple ! ! !</title>
   <script type="text/javascript" src="script.js"></script>
   <link href="style.css" rel="stylesheet" type="text/css"/>
   <meta charset="utf-8"/>
